tests/snapshots/cli_snapshot__spike_health_json_snapshot.snap
---
source: tests/cli_snapshot.rs
info:
  program: recall
  args:
    - health
    - "--json"
  env:
    RECALL_DB: /tmp/.tmpILocuh/test.sqlite3
---
success: true
exit_code: 0
----- stdout -----
{
  "total_chunks": 0,
  "import_chunks": 0,
  "session_chunks": 0,
  "agent_chunks": 0,
  "wing_count": 0,
  "wings": {},
  "import_wings": [],
  "duplicates": [],
  "last_ingest_ts": 0,
  "discoverable_projects": "[N]",
  "covered_projects": 0,
  "missing_projects": ["[FILTERED]"],
  "stale_wings": [],
  "ort_version": "[ORT]",
  "ort_version_expected": "1.28.2"
}

----- stderr -----
