tests/snapshots/cli_snapshot__spike_search_no_results.snap
---
source: tests/cli_snapshot.rs
info:
  program: recall
  args:
    - search
    - nonexistent query
  env:
    RECALL_DB: "C:\\Users\\uosmi\\AppData\\Local\\Temp\\.tmpDhDjiJ\\test.sqlite3"
---
success: true
exit_code: 0
----- stdout -----
No results found.

----- stderr -----
